# SocketChat

Server/: CMakeLists.txt  Report.md
Server/src/: main.cpp
Server/src/client/: Client.cpp  Client.h  chat_pb2.py  client.py  client_cli.py  socket_client.py
Server/src/model/: User.cpp  User.h
Server/src/protobuf/: chat.pb.cc  chat.pb.h  chat.proto
Server/src/server/: Server.cpp  Server.h  SocketServer.cpp  SocketServer.h  main.cpp
Server/test/: TestServer.cpp  TestSome.cpp
